iptables
# Generated by iptables-save v1.4.16.3 on Tue Jan  8 04:48:38 2013
*raw
:PREROUTING ACCEPT [10285:2238086]
:OUTPUT ACCEPT [10311:694024]
-A PREROUTING -d 46.249.58.169/32 -j TRACE
-A OUTPUT -d 46.249.58.169/32 -j TRACE
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -o veth0 -j CT --notrack
COMMIT
# Completed on Tue Jan  8 04:48:38 2013
# Generated by iptables-save v1.4.16.3 on Tue Jan  8 04:48:38 2013
*filter
:INPUT ACCEPT [8021:1150714]
:FORWARD ACCEPT [9:756]
:OUTPUT ACCEPT [11546:757513]
COMMIT
# Completed on Tue Jan  8 04:48:38 2013
# Generated by iptables-save v1.4.16.3 on Tue Jan  8 04:48:38 2013
*nat
:PREROUTING ACCEPT [858:43054]
:INPUT ACCEPT [227:9972]
:OUTPUT ACCEPT [2271:159673]
:POSTROUTING ACCEPT [30:1007]
-A POSTROUTING -o wlan0 -j MASQUERADE
-A POSTROUTING -o wwan0 -j MASQUERADE
COMMIT
# Completed on Tue Jan  8 04:48:38 2013
# Generated by iptables-save v1.4.16.3 on Tue Jan  8 04:48:38 2013
*mangle
:PREROUTING ACCEPT [6412:372663]
:INPUT ACCEPT [6006:351413]
:FORWARD ACCEPT [9:756]
:OUTPUT ACCEPT [8575:528302]
:POSTROUTING ACCEPT [8584:529058]
:DIVERT - [0:0]
-A PREROUTING -p tcp -m socket -j DIVERT
-A PREROUTING -p tcp -m tcp --dport 80 -j TPROXY --on-port 3128 --tproxy-mark 0x1/0x1
-A DIVERT -j MARK --set-xmark 0x1/0xffffffff
-A DIVERT -j ACCEPT
COMMIT
# Completed on Tue Jan  8 04:48:38 2013
